a full stop added

--- a/app/views/create-cases-add-products/cases-page.html
+++ b/app/views/create-cases-add-products/cases-page.html
@@ -25,7 +25,7 @@
             </summary>
             <div class="govuk-details__text">
                 <p class="govuk-body-s">
-                    Cases are used to record findings of investigations and to notify the <abbr title="Office for Product Safety and Standards">OPSS</abbr> about unsafe and non-compliant products
+                    Cases are used to record findings of investigations and to notify the <abbr title="Office for Product Safety and Standards">OPSS</abbr> about unsafe and non-compliant products.
                 </p>
 
                 <p class="govuk-body-s">
