--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -22,6 +22,10 @@ abbr[title]{
     }
 }
 
+.opss-text-align-center {
+    text-align: center;
+}
+
 .opss-border-top, .opss-border-bottom {
     border-color: $govuk-border-colour;
     border-style: solid;
