--- a/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
+++ b/app/views/nanomaterials-1149/cosmetic-products-alt-01.html
@@ -109,7 +109,7 @@
 
 <!-- accordian only shown if there are errors - starts -->
 {% set errorsTblHTML %}
-<div class="govuk-grid-column-full-width">
+<div class="govuk-grid-column-full">
   <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14 opss-text-align-right">
     Dismiss all errors
   </a>
