--- a/app/views/drafts-gui/draft-1_pt-4.html
+++ b/app/views/drafts-gui/draft-1_pt-4.html
@@ -7,10 +7,9 @@
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "index"
+        href: "draft-1_pt-1"
     }) }}
 {% endblock %}
-
 
 {% block content %}
 
@@ -20,7 +19,7 @@
     <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
 
         <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
-            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: You have completed 0 of 4 sections.
+            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: You have completed 3 of 4 sections.
         </p>
 
         <ol class="app-task-list">
@@ -32,12 +31,12 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-1.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-status">
                                 Create the product
                             </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-status">Not started</b>
+                        <b class="govuk-tag app-task-list__tag" id="product-status">Completed</b>
                     </li>
                 </ul>
             </li>
@@ -49,10 +48,12 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            Product details
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-details-status">
+                                Product details
+                            </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-details-status">Cannot start yet</b>
+                        <b class="govuk-tag app-task-list__tag" id="product-details-status">Completed</b>
                     </li>
                 </ul>
             </li>
@@ -64,10 +65,12 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            Category and formation
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="formation-details-status">
+                                Category and formation
+                            </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-details-status">Cannot start yet</b>
+                        <b class="govuk-tag app-task-list__tag" id="formation-details-status">Completed</b>
                     </li>
                 </ul>
             </li>
@@ -79,10 +82,12 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            Accept and submit
+                            <a href="draft-1_step-4.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="accept-status">
+                                Accept and submit
+                            </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="accept-status">Cannot start yet</b>
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="accept-status">Not started</b>
                     </li>
                 </ul>
             </li>
