--- a/app/views/drafts-gui/draft-1_pt-2.html
+++ b/app/views/drafts-gui/draft-1_pt-2.html
@@ -20,7 +20,7 @@
     <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
 
         <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
-            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: You have completed 1 of 4 sections.
+            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 1 of 4 sections have been completed.
         </p>
 
         <ol class="app-task-list">
@@ -69,7 +69,7 @@
                             Category and formation
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-details-status">Cannot start yet</b>
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-details-status">Cannot start yet</b>
                     </li>
                 </ul>
             </li>
