--- a/app/views/drafts-gui/draft-1_pt-3.html
+++ b/app/views/drafts-gui/draft-1_pt-3.html
@@ -19,7 +19,7 @@
     <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
 
         <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
-            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: You have completed 2 of 4 sections.
+            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 2 of 4 sections have been completed.
         </p>
 
         <ol class="app-task-list">
