--- a/app/views/drafts-gui/inc_opss-link-pg-css.html
+++ b/app/views/drafts-gui/inc_opss-link-pg-css.html
@@ -1,7 +1,9 @@
         <style>
-            body {padding: 100px; }
-            p, li {font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 20px; }
+            body {padding: 100px; font-family: Verdana, Geneva, Tahoma, sans-serif; }
+            p, li {font-size: 20px; }
             li {margin-bottom: 16px; }
             li ul {margin-top: 16px; }
             a {color: #1d70b8; }
+            .indent {/*text-indent: 30px; */ display: block; margin-left: 40px; }
+            hr {width: 100%; display: block; margin: 50px 20px 50px 20px; }
         </style>
