--- a/app/views/drafts-gui/draft-2_pt-2.html
+++ b/app/views/drafts-gui/draft-2_pt-2.html
@@ -1,13 +1,13 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Drafts page template
+    Drafts page
 {% endblock %}
 
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "index"
+        href: "draft-2_pt-1"
     }) }}
 {% endblock %}
 
@@ -20,7 +20,7 @@
     <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
 
         <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
-            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 1 of 4 sections have been completed.
+            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 1 of 5 sections have been completed.
         </p>
 
         <ol class="app-task-list">
@@ -32,7 +32,7 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-1.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-status">
                                 Create the product
                             </a>
                         </span>
@@ -49,26 +49,26 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
-                                Consectetur adipiscing
+                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
+                                Nanomaterial 1
                             </a>
                         </span>
 
-                        <b class="govuk-tag app-task-list__tag" id="nano-01-status">Completed</b>
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="nano-01-status">Not started</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
-                                Phasellus
+                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
+                                Nanomaterial 2
                             </a>
                         </span>
 
-                        <b class="govuk-tag app-task-list__tag" id="nano-02-status">Completed</b>
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="nano-02-status">Not started</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
-                                Pellentesque
+                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
+                                Nanomaterial 3
                             </a>
                         </span>
 
@@ -96,24 +96,7 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-details-status">
                                 Product details
-                            </a>
-                        </span>
-
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-details-status">Not started</b>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">3. </span> Category and formation
-                </h2>
-
-                <ul class="app-task-list__items">
-                    <li class="app-task-list__item">
-                        <span class="app-task-list__task-name">
-                            Category and formation
                         </span>
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-details-status">Cannot start yet</b>
@@ -122,7 +105,22 @@
             </li>
             <li>
                 <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">4. </span> Accept and submit
+                    <span class="app-task-list__section-number">4. </span> Category and formation
+                </h2>
+
+                <ul class="app-task-list__items">
+                    <li class="app-task-list__item">
+                        <span class="app-task-list__task-name">
+                            Category and formation
+                        </span>
+
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-details-status">Cannot start yet</b>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2 class="app-task-list__section">
+                    <span class="app-task-list__section-number">5. </span> Accept and submit
                 </h2>
 
                 <ul class="app-task-list__items">
