--- a/app/views/drafts-gui/draft-2_pt-3.html
+++ b/app/views/drafts-gui/draft-2_pt-3.html
@@ -1,16 +1,15 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Drafts page template
+    Drafts page
 {% endblock %}
 
 {% block beforeContent %}
     {{ govukBackLink({
         text: "Back",
-        href: "index"
+        href: "draft-2_pt-1"
     }) }}
 {% endblock %}
-
 
 {% block content %}
 
@@ -20,7 +19,7 @@
     <section class="govuk-grid-column-three-quarters" role="region" aria-label="Tasks">
 
         <p class="govuk-body govuk-!-margin-top-9 govuk-!-margin-bottom-7 govuk-!-display-block opss-text-align-center">
-            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 1 of 4 sections have been completed.
+            <span class="govuk-visually-hidden">The task list is </span><span class="govuk-!-font-weight-bold">Incomplete</span>: 2 of 5 sections have been completed.
         </p>
 
         <ol class="app-task-list">
@@ -32,7 +31,7 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-1.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-status">
+                            <a href="#" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-status">
                                 Create the product
                             </a>
                         </span>
@@ -49,7 +48,7 @@
                 <ul class="app-task-list__items opss-task-sub__list">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
+                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-01-status">
                                 Consectetur adipiscing
                             </a>
                         </span>
@@ -58,7 +57,7 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
+                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-02-status">
                                 Phasellus
                             </a>
                         </span>
@@ -67,12 +66,12 @@
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
+                            <a href="draft-2_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="nano-03-status">
                                 Pellentesque
                             </a>
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="nano-03-status">Not started</b>
+                        <b class="govuk-tag app-task-list__tag" id="nano-03-status">Completed</b>
                     </li>
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
@@ -96,7 +95,7 @@
                 <ul class="app-task-list__items">
                     <li class="app-task-list__item">
                         <span class="app-task-list__task-name">
-                            <a href="draft-1_step-2.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-details-status">
+                            <a href="draft-2_step-3.html" class="govuk-link govuk-link--no-visited-state" aria-describedby="product-details-status">
                                 Product details
                             </a>
                         </span>
@@ -107,7 +106,7 @@
             </li>
             <li>
                 <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">3. </span> Category and formation
+                    <span class="app-task-list__section-number">4. </span> Category and formation
                 </h2>
 
                 <ul class="app-task-list__items">
@@ -116,13 +115,13 @@
                             Category and formation
                         </span>
 
-                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="product-details-status">Cannot start yet</b>
+                        <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="formation-details-status">Cannot start yet</b>
                     </li>
                 </ul>
             </li>
             <li>
                 <h2 class="app-task-list__section">
-                    <span class="app-task-list__section-number">4. </span> Accept and submit
+                    <span class="app-task-list__section-number">5. </span> Accept and submit
                 </h2>
 
                 <ul class="app-task-list__items">
