--- a/app/views/drafts-gui/add-nano-step.html
+++ b/app/views/drafts-gui/add-nano-step.html
@@ -4,22 +4,21 @@
     </head>
     <body>
 
-        <p>If the draft does not already feature a multi-items kit, the user goes straight to: </p>
+        <p>The <u>Add</u> link only appears when the status of these tasks are not 'Cannot start yet'. (<i>The Add link only appears if nanomaterials have already been added - so 'rinse off' and 'exposure' questions are already set for all nanomaterials.</i>)</p>
 
-        <p class="indent">The first page of the nanomaterials task (journey). <br>This nanomaterial is then automatically associated with the single product.</p>
-
-        <p>Else</p>
-
-        <p class="indent">The user is served a new HTML page: via check boxes we ask which items (shown in a list) include the nanomaterial you are adding?<br>'Continue' then takes the user straight to the first page of the nanomaterials task (journey).</p>
 
         <hr>
 
-        <p>When returning to the draft page after completeing the nanomaterial task/journey, the new nanomaterial is shown appended to the nanomaterials list (with a completed status). The list remains in its original order.</p>
+        <p>The user goes straight to the first page of the nanomaterials task (journey). If the draft is a single product, this nanomaterial is automatically associated with the single product. (The use must re-run item tasks to add any nanomaterials it an item in a multi-item product).</p>
 
-        <p style="margin-top: 50px;"><small>The <u>Add</u> link is only available if nanomaterials have already been featured - so 'rinse off' and 'exposure' questions are already set for all nanomaterials.</small></p>
+        <hr>
+
+        <p>When returning to the draft page after completing the nanomaterial task/journey, the new nanomaterial is shown appended to the nanomaterials list (with a completed status). The list remains in its original order.</p>
 
 
-        <p><a href="draft-2_pt-2.html">Return</a> to previous draft state (or use your back button).</p>
+
+
+        <p><a href="#" onclick="history.go(-1);return false;">Return</a> to previous draft state (or use your back button).</p>
 
     </body>
 </html>
