--- a/app/views/drafts-gui/index.html
+++ b/app/views/drafts-gui/index.html
@@ -32,7 +32,9 @@
         <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-8">
             <li>Add a simple product (with no multipule items or nanomaterials).<br><a href="draft-1_pt-1" class="govuk-link govuk-link--no-visited-state" target="_blank">Version 1</a></li>
 
-            <li>Add a product (with 3 nanomaterials).<br><a href="draft-2_pt-1" class="govuk-link govuk-link--no-visited-state" target="_blank">Version 2</a></li>
+            <li>Add a product (with 3x nanomaterials).<br><a href="draft-2_pt-1" class="govuk-link govuk-link--no-visited-state" target="_blank">Version 2</a></li>
+
+            <li>Add a product (with with 4x nanomaterials as a multi-item kit - featuring 3x items).<br><a href="draft-3_pt-1" class="govuk-link govuk-link--no-visited-state" target="_blank">Version 3</a></li>
 
         </ul>
 
