--- a/app/views/drafts-gui/draft-2_pt-2.html
+++ b/app/views/drafts-gui/draft-2_pt-2.html
@@ -74,7 +74,7 @@
 
                         <b class="govuk-tag govuk-tag--grey app-task-list__tag" id="nano-03-status">Not started</b>
                     </li>
-                    <li class="app-task-list__item">
+                    <li class="app-task-list__item opss-task-sub__last">
                         <span class="app-task-list__task-name">
                             <a href="add-nano-step.html" class="govuk-link govuk-link--no-visited-state">
                                 Add <span class="govuk-visually-hidden">another nanomaterial</span>
