--- a/app/views/drafts-gui/draft-2_pt-5.html
+++ b/app/views/drafts-gui/draft-2_pt-5.html
@@ -73,7 +73,7 @@
 
                         <b class="govuk-tag app-task-list__tag" id="nano-03-status">Completed</b>
                     </li>
-                    <li class="app-task-list__item">
+                    <li class="app-task-list__item opss-task-sub__last">
                         <span class="app-task-list__task-name">
                             <a href="add-nano-step.html" class="govuk-link govuk-link--no-visited-state">
                                 Add <span class="govuk-visually-hidden">another nanomaterial</span>
